--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-app-angular2",
+  "name": "angular2-webpack",
   "version": "1.0.0",
-  "description": "A test app for AppPulse Web",
+  "description": "A webpack starter for angular 2",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
